--- a/catalog.html
+++ b/catalog.html
@@ -186,8 +186,10 @@
           <ul class="hotel-list">
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
-                <h3 class="hotel-card-title heading-small">Amara Resort & Spa</h3>
+                <a class="hotel-catalog-link" href="#">
+                  <img class="hotel-card-image" src="images/catalog/amara-resort-spa.jpeg" width="300" height="211" alt="Гостиница Amara Resort & Spa">
+                  <h3 class="hotel-card-title heading-small">Amara Resort & Spa</h3>
+                </a>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 4000 ₽</dd>
@@ -206,8 +208,10 @@
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
-                <h3 class="hotel-card-title heading-small">Villas at Poco Diablo</h3>
+                <a class="hotel-catalog-link" href="#">
+                  <img class="hotel-card-image" src="images/catalog/villas-at-poco-diablo.jpeg" width="300" height="211" alt="Гостиница Villas at Poco Diablo">
+                  <h3 class="hotel-card-title heading-small">Villas at Poco Diablo</h3>
+                </a>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 5000 ₽</dd>
@@ -226,8 +230,10 @@
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
-                <h3 class="hotel-card-title heading-small">Desert Quail Inn</h3>
+                <a class="hotel-catalog-link" href="#">
+                  <img class="hotel-card-image" src="images/catalog/desert-quail-inn.jpeg" width="300" height="211" alt="Гостиница Desert Quail Inn">
+                  <h3 class="hotel-card-title heading-small">Desert Quail Inn</h3>
+                </a>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 2500 ₽</dd>
@@ -245,8 +251,10 @@
             </li>
             <li class="hotel-card">
               <div class="hotel-card-content">
-                <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
-                <h3 class="hotel-card-title heading-small">GreenTree Inn</h3>
+                <a class="hotel-catalog-link" href="#">
+                  <img class="hotel-card-image" src="images/catalog/greentree-inn.jpeg" width="300" height="211" alt="Гостиница GreenTree Inn">
+                  <h3 class="hotel-card-title heading-small">GreenTree Inn</h3>
+                </a>
                 <dl class="hotel-card-type-price">
                   <dt class="hotel-type">Гостиница</dt>
                   <dd class="hotel-price">От 1500 ₽</dd>
